--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-    <!-- HERO -->
 <main>
+    <!-- HERO -->
     <section class="hero">
         <div class="contenidohero">
             <h1 class="titulohero">
@@ -19,6 +19,21 @@
             Drive more engagement for your games when players fight it out against one another in battles. When players compete, your game wins!
             </p>
             <button class="botonhero">INTEGRATE NOW</button>
+        </div>
+    </section>
+    <!-- NAV -->
+    <section class="nav">
+        <div class="navboton navseparador">
+            <p class="navtexto">Getting Started</p>
+        </div>
+        <div class="navboton navseparador">
+            <p class="navtexto">Create Account</p>
+        </div>
+        <div class="navboton navseparador">
+            <p class="navtexto">Download SDK</p>
+        </div>
+        <div class="navboton">
+            <p class="navtexto">Tutorials</p>
         </div>
     </section>
 </main>
