no compila dani

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-
-    <!-- HERO -->
 <main>
+
+<!-- HERO -->
+<!-- COMIENZO DEL HERO -->
     <section class="hero">
         <div class="contenidohero">
             <h1 class="titulohero">
@@ -21,8 +22,35 @@
             <button class="botonhero">INTEGRATE NOW</button>
         </div>
     </section>
+ <!-- FIN DEL HERO -->
+
+
+ 
+<!-- MAIN-IMAGEN -->
+<!-- COMIENZO DEL MAIN-IMAGEN -->
+    <section class="imagen">
+        <div class="contenidoimagen">
+            <h1 class="tituloimagen">
+            WHAT THE SAY 
+            </h1>
+            <p class="parrafoimagen">
+            Integration the Playphone SDK
+            was extremely developer friendly.
+            It's lean and easy to integrate and
+            test. We got it out there in less
+            than a day.
+            </p>
+            <p class="footerimagen">
+                ALOK KUMAR.
+                <br>
+                DIRECTO OF GAME DEVELOPMENT.
+                <br>
+                JUNE SOFTWARE INT.
+            </p>
+        </div>
+    </section>
+ <!-- FIN DEL MAIN-IMAGEN -->
+
 </main>
-
-
 </body>
 </html>
