--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="../ADA-Clase26/css/style.css">
+</head>
+<body>
+    
+</body>
+</html>
 <html>
     <body>
-     <div class="contenedor-button"> </div>
-       <h1 class="titulo">
-           <p>started in 10 minutes, with only 10 lines of code 
-            </p>
-        </h1>
-        <div> 
-            <button class="get started"> 
-                <label for="GET-STARTED" >GET STARTED </label>                
-            </button>
-        </div>  
-        </h1>
-
+        <div class="contenedor-button"> 
+            <h1 class="titulo">
+            started in 10 minutes, with only 10 lines of code
+            </h1>
+            <div> 
+                <button class="get started"> 
+                  <label for="GET-STARTED" >GET STARTED </label>                
+                </button>
+            </div>  
+        </div>
     </body>
 </html>
