--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <h1 class="titulo">
             started in 10 minutes, with only 10 lines of code
             </h1>
-            <div> 
+            <section> 
                 <button class="get started"> 
                   <label for="GET-STARTED" >GET STARTED </label>                
                 </button>
-            </div>  
+            </section>  
         </div>
     </body>
 </html>
